--- a/tableau.html
+++ b/tableau.html
@@ -8,7 +8,7 @@
 <body>
        
     <header>
-        <img src="jarditou-css/src/img/jarditou_logo.jpg" titre="logo jarditou" alt="logo jarditou"> 
+        <img src="jarditou-css/src/img/jarditou_logo.jpg" title="logo jarditou" alt="logo jarditou"> 
         <p>La qualité depuis 70ans </p>
     
         <nav>
@@ -19,25 +19,27 @@
             </ul>
         </nav>
 
-        <img src="jarditou-css/src/img/promotion.jpg" titre="promotion" alt="promotion">
+        <img src="jarditou-css/src/img/promotion.jpg" title="promotion" alt="promotion">
 
-        <H1>Acceuil</H1>
+        <h1>Tableau</h1>
     </header>
 
     <table>
-        <caption> <h1><b>Tableau</h1></caption>
+        <caption><h1>Tableau</h1></caption>
         <thead>
-            <th>Photo</th>
-            <th>ID</th>
-            <th>Catégorie</th>
-            <th>Libellé</th>
-            <th>Prix</th>
-            <th>Couleur</th>
-        </thead> </b>
+            <tr>
+                <th>Photo</th>
+                <th>ID</th>
+                <th>Catégorie</th>
+                <th>Libellé</th>
+                <th>Prix</th>
+                <th>Couleur</th>
+            </tr>
+        </thead>
 
         <tbody>
             <tr>
-                <td><img width="100" height="100" src="jarditou-css/src/img/7.jpg" alt="barbecue 7" titre="barbecue 7"> </td>
+                <td><img width="100" height="100" src="jarditou-css/src/img/7.jpg" alt="barbecue 7" title="barbecue 7"> </td>
                 <td>7</td>
                 <td>Barbecues</td>
                 <td>Aramis</td>
@@ -45,7 +47,7 @@
                 <td>Brun</td>
             </tr>
             <tr>
-                <td><img width="100" height="100" src="jarditou-css/src/img/8.jpg" alt="barbecue8" titre="barbecue8"> </td>
+                <td><img width="100" height="100" src="jarditou-css/src/img/8.jpg" alt="barbecue8" title="barbecue8"> </td>
                 <td>8</td>
                 <td>Barbecues</td>
                 <td>Athos</td>
@@ -53,7 +55,7 @@
                 <td>Noir</td>
             </tr>
             <tr>
-                <td><img width="100" height="100" src="jarditou-css/src/img/11.jpg" alt="barbecue11" titre="barbecue11"> </td>
+                <td><img width="100" height="100" src="jarditou-css/src/img/11.jpg" alt="barbecue11" title="barbecue11"> </td>
                 <td>11</td>
                 <td>barbecues</td>
                 <td>Clatronic</td>
@@ -61,7 +63,7 @@
                 <td>Chrome</td>
             </tr>
             <tr>
-                <td><img width="100" height="100" src="jarditou-css/src/img/12.jpg" alt="barbecue12" titre="barbecue12"> </td>
+                <td><img width="100" height="100" src="jarditou-css/src/img/12.jpg" alt="barbecue12" title="barbecue12"> </td>
                 <td>12</td>
                 <td>Barbecues</td>
                 <td>Camping</td>
@@ -69,7 +71,7 @@
                 <td>Noir</td>
             </tr>
             <tr>
-                <td><img width="100" height="100" src="jarditou-css/src/img/13.jpg" alt="brouette13" titre="brouette13"> </td>
+                <td><img width="100" height="100" src="jarditou-css/src/img/13.jpg" alt="brouette13" title="brouette13"> </td>
                 <td>13</td>
                 <td>Brouette</td>
                 <td>Green</td>
@@ -82,9 +84,9 @@
     <footer>
         <nav>
             <ul>
-                <li> <a href="index.html" titre="mentions légales">Mention légales</a></li>
-                <li> <a href="index.html" titre="Horaires">Horaires</a></li>
-                <li> <a href="index.html" titre="plan">Plan du site</a></li>
+                <li> <a href="index.html" title="mentions légales">Mention légales</a></li>
+                <li> <a href="index.html" title="Horaires">Horaires</a></li>
+                <li> <a href="index.html" title="plan">Plan du site</a></li>
             </ul>
         </nav>
     </footer>
