--- a/tableau.html
+++ b/tableau.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tableau</title>
 </head>
+
 <body>
-       
+
     <header>
-        <img src="jarditou-css/src/img/jarditou_logo.jpg" title="logo jarditou" alt="logo jarditou"> 
+        <img src="jarditou-css/src/img/jarditou_logo.jpg" title="logo jarditou" alt="logo jarditou">
         <p>La qualité depuis 70ans </p>
-    
+
         <nav>
             <ul>
                 <li> <a href="index.html" title="accueil">Accueil</a> </li>
@@ -25,7 +27,9 @@
     </header>
 
     <table>
-        <caption><h1>Tableau</h1></caption>
+        <caption>
+            <h1>Tableau</h1>
+        </caption>
         <thead>
             <tr>
                 <th>Photo</th>
@@ -39,7 +43,8 @@
 
         <tbody>
             <tr>
-                <td><img width="100" height="100" src="jarditou-css/src/img/7.jpg" alt="barbecue 7" title="barbecue 7"> </td>
+                <td><img width="100" height="100" src="jarditou-css/src/img/7.jpg" alt="barbecue 7" title="barbecue 7">
+                </td>
                 <td>7</td>
                 <td>Barbecues</td>
                 <td>Aramis</td>
@@ -47,7 +52,8 @@
                 <td>Brun</td>
             </tr>
             <tr>
-                <td><img width="100" height="100" src="jarditou-css/src/img/8.jpg" alt="barbecue8" title="barbecue8"> </td>
+                <td><img width="100" height="100" src="jarditou-css/src/img/8.jpg" alt="barbecue8" title="barbecue8">
+                </td>
                 <td>8</td>
                 <td>Barbecues</td>
                 <td>Athos</td>
@@ -55,7 +61,8 @@
                 <td>Noir</td>
             </tr>
             <tr>
-                <td><img width="100" height="100" src="jarditou-css/src/img/11.jpg" alt="barbecue11" title="barbecue11"> </td>
+                <td><img width="100" height="100" src="jarditou-css/src/img/11.jpg" alt="barbecue11" title="barbecue11">
+                </td>
                 <td>11</td>
                 <td>barbecues</td>
                 <td>Clatronic</td>
@@ -63,7 +70,8 @@
                 <td>Chrome</td>
             </tr>
             <tr>
-                <td><img width="100" height="100" src="jarditou-css/src/img/12.jpg" alt="barbecue12" title="barbecue12"> </td>
+                <td><img width="100" height="100" src="jarditou-css/src/img/12.jpg" alt="barbecue12" title="barbecue12">
+                </td>
                 <td>12</td>
                 <td>Barbecues</td>
                 <td>Camping</td>
@@ -71,7 +79,8 @@
                 <td>Noir</td>
             </tr>
             <tr>
-                <td><img width="100" height="100" src="jarditou-css/src/img/13.jpg" alt="brouette13" title="brouette13"> </td>
+                <td><img width="100" height="100" src="jarditou-css/src/img/13.jpg" alt="brouette13" title="brouette13">
+                </td>
                 <td>13</td>
                 <td>Brouette</td>
                 <td>Green</td>
@@ -92,4 +101,5 @@
     </footer>
 
 </body>
+
 </html>
