--- a/contact.html
+++ b/contact.html
@@ -4,27 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="jarditou-css/assets/css/fichier1.css">
     <title>Contact</title>
 </head>
 
 <body>
 
     <header>
-        <img src="jarditou-css/src/img/jarditou_logo.jpg" title="logo jarditou" alt="logo jarditou">
+        <img src="jarditou-css/src/img/jarditou_logo.jpg" title="logo jarditou" alt="logo jarditou" width="300">
         <p>La qualité depuis 70ans </p>
 
         <nav>
             <ul>
                 <li> <a href="index.html" title="accueil">Accueil</a> </li>
                 <li> <a href="tableau.html" title="tableau">Tableau</a> </li>
-                <li> <a href="contact.html" title="contact">Contact</a> </li>
+                <li> <a href="contact.html" title="contact">Formulaire</a> </li>
             </ul>
         </nav>
 
-        <img src="jarditou-css/src/img/promotion.jpg" title="promotion" alt="promotion">
+        <img src="jarditou-css/src/img/promotion.jpg" title="promotion" alt="promotion" width="100%">
 
-        <H1>Contact</H1>
     </header>
+
+<H1>Contact</H1>
 
     <p>* ces champs sont obligatoires</p>
     <form action="http://bienvu.net/script.php" method="post" id="formulaire_contact">
@@ -60,6 +62,7 @@
         <button type="submit">Envoyer</button>
         <button type="button">Annuler</button>
     </form>
+    <br>
     <footer>
         <nav>
             <ul>
