--- a/index.html
+++ b/index.html
@@ -4,28 +4,32 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="jarditou-css/assets/css/fichier1.css">
     <title>index</title>
 </head>
 
 <body>
 
     <header>
-        <img src="jarditou-css/src/img/jarditou_logo.jpg" title="logo jarditou" alt="logo jarditou">
-        <p>La qualité depuis 70ans </p>
+        <img src="jarditou-css/src/img/jarditou_logo.jpg" title="logo jarditou" alt="logo jarditou" width="300">
+        <p>Tout le jardin</p>
 
         <nav>
             <ul>
                 <li> <a href="index.html" title="accueil">Accueil</a> </li>
                 <li> <a href="tableau.html" title="tableau">Tableau</a> </li>
-                <li> <a href="contact.html" title="contact">Contact</a> </li>
+                <li> <a href="contact.html" title="contact">Formulaire</a> </li>
             </ul>
         </nav>
 
-        <img src="jarditou-css/src/img/promotion.jpg" title="promotion" alt="promotion">
+        <img src="jarditou-css/src/img/promotion.jpg" title="promotion" alt="promotion" width="100%">
 
-        <H1>Acceuil</H1>
+        
     </header>
 
+    <aside>[colonne de droite]</aside>
+    <H1>Acceuil</H1>
+    
     <article>
         <h2>L'entreprise</h2>
 
@@ -33,7 +37,7 @@
             paysagisme</p>
         <p>Créée il y a 70ans, notre entreprise vend fleurs, arbustes, matériel à main et motorisés.</p>
         <p>Implantés à Amiens, nous ontervenons dans tout le département de la Somme: Albert, Doullens, Péronne,
-            Abbevile, corbie</p>
+            Abbevile, Corbie.</p>
     </article>
     <article>
         <h2>Qualité</h2>
