--- a/tableau.html
+++ b/tableau.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="jarditou-css/assets/css/fichier1.css">
     <title>Tableau</title>
 </head>
 
 <body>
 
     <header>
-        <img src="jarditou-css/src/img/jarditou_logo.jpg" title="logo jarditou" alt="logo jarditou">
+        <img src="jarditou-css/src/img/jarditou_logo.jpg" title="logo jarditou" alt="logo jarditou" width="300">
         <p>La qualité depuis 70ans </p>
 
         <nav>
@@ -21,11 +22,12 @@
             </ul>
         </nav>
 
-        <img src="jarditou-css/src/img/promotion.jpg" title="promotion" alt="promotion">
+        <img src="jarditou-css/src/img/promotion.jpg" title="promotion" alt="promotion" width="100%">
 
-        <h1>Tableau</h1>
     </header>
 
+<h1>Tableau</h1>
+    
     <table>
         <caption>
             <h1>Tableau</h1>
