--- a/tableau.html
+++ b/tableau.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <link rel="stylesheet" href="jarditou-css/assets/css/fichier1.css">
     <title>Tableau</title>
 </head>
@@ -29,9 +29,6 @@
 <h1>Tableau</h1>
     
     <table>
-        <caption>
-            <h1>Tableau</h1>
-        </caption>
         <thead>
             <tr>
                 <th>Photo</th>
@@ -91,6 +88,7 @@
             </tr>
         </tbody>
     </table>
+<br>
 
     <footer>
         <nav>
