--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -24,7 +24,6 @@
 
         <img src="jarditou-css/src/img/promotion.jpg" title="promotion" alt="promotion" width="100%">
 
-        
     </header>
 
     <aside>[colonne de droite]</aside>
